--- a/res/layout/ui_actionbar.xml
+++ b/res/layout/ui_actionbar.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
 
 
+
         <android.support.v4.view.ViewPager
             android:id="@+id/ui_actionbar_vPager"
             android:layout_width="wrap_content"
@@ -14,6 +15,8 @@
             android:background="#000000"
             android:flipInterval="30"
             android:persistentDrawingCache="animation" />
+
+    <include layout="@layout/toolbar" />
 
     <FrameLayout
         android:layout_width="wrap_content"
