--- a/res/menu/toolbar.xml
+++ b/res/menu/toolbar.xml
@@ -14,7 +14,7 @@
         android:orderInCategory="90"
         android:title="action_share"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
