--- a/res/layout/ui_speak_comment.xml
+++ b/res/layout/ui_speak_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
@@ -53,7 +54,8 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:gravity="bottom"
-        android:id="@+id/ui_speak_comment_editLayout" >
+        android:id="@+id/ui_speak_comment_editLayout"
+        android:orientation="horizontal">
         
      
         <ImageView
@@ -63,7 +65,22 @@
             android:layout_marginRight="5dp"
             android:src="@drawable/ic_publish_operation_bar_keyboard" />
         
-        <EditText
+        <com.app.demos.layout.materialEditText.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoText="true"
+            android:maxLines="3"
+            android:hint="Library Name"
+            android:text="MaterialEditText"
+            android:textCursorDrawable="@drawable/text_cursor_cyan"
+            android:textSize="34sp"
+            app:met_baseColor="@android:color/black"
+            app:met_floatingLabel="highlight"
+            app:met_maxCharacters="20"
+            app:met_primaryColor="?colorAccent"
+            app:met_singleLineEllipsis="true"
+            android:singleLine="true" />
+            <!--
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
@@ -72,7 +89,9 @@
             android:focusable="false"
             android:editable="true"
             android:hint="@string/btn_comment"
-            android:maxLines="5" />
+            android:maxLines="5"
+             -->
+
         
         <ImageView
             android:layout_width="wrap_content"
