--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,5 +19,8 @@
     <color name="white0">#ffffffff</color>
     <color name="holo_blue">#ff0a91ff</color>
     <color name="background_tab_pressed">#6633B5E5</color>
+    <color name="indigo_500">#3f51b5</color>
+    <color name="indigo_700">#303f9f</color>
+    <color name="cyan_500">#00bcd4</color>
 
 </resources>
