--- a/res/layout/tpl_list_speak.xml
+++ b/res/layout/tpl_list_speak.xml
@@ -17,7 +17,7 @@
             android:adjustViewBounds="true"
             android:background="@color/black"
             android:focusable="false"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter" />
 
         <com.app.demos.layout.MyTextView
             android:id="@+id/tpl_list_speak_tv_content"
@@ -30,8 +30,11 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="15dp"
-            android:textColor="@color/red"
-            android:textSize="25sp" />
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:lineSpacingExtra="2dp"/>
+            <!-- 行距 -->
+
 
     <LinearLayout
         android:id="@+id/tpl_list_speak_bottom_layout"
