--- a/res/layout/tpl_list_speak.xml
+++ b/res/layout/tpl_list_speak.xml
@@ -76,5 +76,12 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#60000000"
+        android:focusable="false"
+         />
+
 
 </RelativeLayout>
