--- a/res/layout/load_more.xml
+++ b/res/layout/load_more.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center_horizontal"
-    android:visibility="gone"
+
     android:id="@+id/load_more_layout" >
 
     <ProgressBar        
