--- a/res/layout/load_more.xml
+++ b/res/layout/load_more.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center_horizontal"
-
+    android:visibility="gone"
     android:id="@+id/load_more_layout" >
 
     <ProgressBar        
