--- a/res/layout/fragment_list_speak_recycler.xml
+++ b/res/layout/fragment_list_speak_recycler.xml
@@ -7,7 +7,7 @@
     android:id="@+id/fragment_speak_layout_recycler">
 
     <!-- 下拉刷新布局 -->
-    <android.support.v4.widget.SwipeRefreshLayout
+    <com.app.demos.layout.swipeRefreshLayout.Progress_m
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,6 +18,6 @@
             android:layout_height="match_parent"
             />
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </com.app.demos.layout.swipeRefreshLayout.Progress_m>
 
 </LinearLayout>
