--- a/res/layout/fragment_list_find.xml
+++ b/res/layout/fragment_list_find.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:id="@+id/fragment_find_layout_recycler">
+
+    <!-- 下拉刷新布局 -->
+    <com.app.demos.layout.swipeRefreshLayout.Progress_m
+        android:id="@+id/swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_find_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </com.app.demos.layout.swipeRefreshLayout.Progress_m>
 
 </LinearLayout>
