--- a/res/layout/fragment_list_speak_recycler.xml
+++ b/res/layout/fragment_list_speak_recycler.xml
@@ -8,7 +8,7 @@
 
     <!-- 下拉刷新布局 -->
     <com.app.demos.layout.swipeRefreshLayout.Progress_m
-        android:id="@+id/swipe_refresh"
+        android:id="@+id/speak_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
