--- a/res/layout/tpl_list_find_card.xml
+++ b/res/layout/tpl_list_find_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -12,14 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.app.demos.layout.CircleImageView
             android:id="@+id/tpl_list_find_card_image_face"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_margin="5dip"
+            android:layout_margin="5dp"
             android:focusable="false"
             android:src="@drawable/face"
-            android:scaleType="centerInside" />
+
+            app:border_width="2dp"
+            app:border_color="@color/red"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -35,18 +38,19 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <LinearLayout
+                <TextView
                     android:id="@+id/tpl_list_find_card_images"
                     android:layout_width="0dp"
-                    android:layout_height="35dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="horizontal"/>
+                    />
 
                 <TextView
                     android:id="@+id/tpl_list_find_card_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="time"/>
+                    android:text="time"
+                    android:layout_gravity="right|top" />
 
             </LinearLayout>
 
@@ -61,6 +65,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
                     android:focusable="false"
                     android:paddingLeft="12dip"
