--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -13,7 +13,12 @@
             <enum name="FILL" value="1" />
         </attr>  
     </declare-styleable>
-    <attr name="layout_height" value="330dp" />
+
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+        <attr name="border_overlay" format="boolean" />
+    </declare-styleable>
 
     <declare-styleable name="PagerSlidingTabStrip">
         <attr name="pstsIndicatorColor" format="color"/>
