--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -27,5 +27,7 @@
     <color name="color_primary_green"> #4caf50</color>
     <color name="color_primary_green_dark">#388e3c</color>
     <color name="color_shadow">#44000000</color>
+    <color name="ui_dark">#20000000</color>
+    <color name="ui_green">#ff98222b</color>
 
 </resources>
