--- a/res/layout/ui_news.xml
+++ b/res/layout/ui_news.xml
@@ -16,10 +16,10 @@
             android:layout_weight="1"
             android:orientation="vertical" >
             
-            <com.app.demos.layout.TitleLayout
+            <com.app.demos.layout.other.TitleLayout
         		android:layout_width="fill_parent"
         		android:layout_height="wrap_content" >                
-            </com.app.demos.layout.TitleLayout>
+            </com.app.demos.layout.other.TitleLayout>
 
             <ListView
                 android:id="@+id/ui_news_list_view"
