--- a/res/layout/tpl_list_speak.xml
+++ b/res/layout/tpl_list_speak.xml
@@ -19,7 +19,7 @@
             android:focusable="false"
             android:scaleType="fitCenter" />
 
-        <com.app.demos.layout.MyTextView
+        <com.app.demos.layout.other.MyTextView
             android:id="@+id/tpl_list_speak_tv_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
