--- a/res/layout/ui_actionbar_hide.xml
+++ b/res/layout/ui_actionbar_hide.xml
@@ -16,11 +16,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
-            <com.app.demos.layout.PagerSlidingTabStrip_my
+            <com.app.demos.layout.other.PagerSlidingTabStrip_my
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tabsHeight" >
-            </com.app.demos.layout.PagerSlidingTabStrip_my>
+            </com.app.demos.layout.other.PagerSlidingTabStrip_my>
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/ui_actionbar_vPager"
@@ -46,8 +46,14 @@
             <TextView
                 android:id="@+id/drawer_tv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="富友凤飞飞string/app_name"/>
+
+            <ListView
+                android:id="@+id/drawer_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </android.support.v4.widget.DrawerLayout>
