--- a/res/layout/ui_blogs.xml
+++ b/res/layout/ui_blogs.xml
@@ -9,9 +9,9 @@
         android:orientation="vertical" >
 
         <!--  include layout="@layout/main_top" -->
-         <com.app.demos.layout.TitleLayout
+         <com.app.demos.layout.other.TitleLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" ></com.app.demos.layout.TitleLayout>
+        android:layout_height="wrap_content" ></com.app.demos.layout.other.TitleLayout>
         
 
         <ScrollView
