--- a/res/layout/ui_gonggao.xml
+++ b/res/layout/ui_gonggao.xml
@@ -14,10 +14,10 @@
             
             android:orientation="vertical" >
                         
-    	    <com.app.demos.layout.TitleLayout
+    	    <com.app.demos.layout.other.TitleLayout
         		android:layout_width="fill_parent"
         		android:layout_height="wrap_content" >    	        
-    	    </com.app.demos.layout.TitleLayout>
+    	    </com.app.demos.layout.other.TitleLayout>
     	    
     	        <TextView
     	            android:layout_width="fill_parent"
