--- a/res/layout/tpl_list_speak_8_27.xml
+++ b/res/layout/tpl_list_speak_8_27.xml
@@ -69,7 +69,7 @@
 
             <FrameLayout
                 android:id="@+id/tpl_list_speak_speak_image_container"
-                android:background="@android:color/transparent"
+                android:background="#ffe6e6e6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/default_horizontal_margin"
