--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="bottom_ellipsis_height">4dp</dimen>
     <dimen name="tabsHeight">40dp</dimen>
     <dimen name="default_horizontal_margin">16.0dip</dimen>
+    <dimen name="list_speak_footer_offset">55.0dip</dimen>
 </resources>
