--- a/res/layout/ui_actionbar_hide.xml
+++ b/res/layout/ui_actionbar_hide.xml
@@ -40,6 +40,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="@drawable/s_1"
+            android:clickable="true"
             android:orientation="vertical"
             android:padding="8dp" >
 
