--- a/res/layout/ui_webview.xml
+++ b/res/layout/ui_webview.xml
@@ -29,7 +29,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <WebView
+                <com.app.demos.layout.other.WebViewMy
                     android:id="@+id/ui_web_view"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent" />
