--- a/res/layout/ui_actionbar_hide.xml
+++ b/res/layout/ui_actionbar_hide.xml
@@ -1,4 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.app.demos.ui.UiActionBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
