--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -29,7 +29,7 @@
     <color name="color_primary_green_dark">#176c13</color>
     <color name="color_shadow">#44000000</color>
     <color name="ui_dark">#20000000</color>
-    <color name="ui_green">#ff98222b</color>
+    <color name="ui_green">#0452f9</color>
     <color name="secret_card_view_linkify_text_1">#ff4182b4</color>
     <color name="green">#ff1abc9c</color>
     <color name="protocol_link">#ff12b7b3</color>
