build.gradle change V23.0.01

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="red">#FF0000</color>
     <color name="gray">#FFFFEE</color>
     <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
     <color name="text">#333333</color>
     <color name="body1">#FFFFFF</color>
     <color name="body2">#F9F9F9</color>
@@ -42,5 +42,9 @@
     <color name="androidColorC">#99CC00</color>
     <color name="androidColorD">#FFBB33</color>
     <color name="androidColorE">#FF4444</color>
+    <color name="colorPrimary">#4876ff</color>
+    <color name="colorPrimaryDark">#3a5fcd</color>
+    <color name="accent_material_light">#009688</color>
+    <color name="background_material_light">#fafafa</color>
 
 </resources>
