--- a/res/layout/tpl_list_speak_comment_header.xml
+++ b/res/layout/tpl_list_speak_comment_header.xml
@@ -68,8 +68,8 @@
 
                 <ImageView
                     android:id="@+id/tpl_list_speak_iv_bg"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:visibility="gone"
                     android:scaleType="centerCrop"
                     android:background="@android:color/transparent"
