--- a/res/layout/tpl_list_speak_8_27.xml
+++ b/res/layout/tpl_list_speak_8_27.xml
@@ -82,7 +82,7 @@
                     android:layout_height="fill_parent"
                     android:visibility="gone"
                     android:scaleType="centerCrop"
-                    android:background="@android:color/transparent"
+                    android:background="@android:color/white"
                     android:contentDescription="@null" />
 
                 <RelativeLayout
