--- a/res/layout/ui_create_speak.xml
+++ b/res/layout/ui_create_speak.xml
@@ -46,9 +46,10 @@
                 android:layout_height="wrap_content">
 
                 <EditText
+                    android:id="@+id/ui_create_speak_edit_content"
                     android:textSize="@dimen/feed_card_content_text_size"
                     android:gravity="top|left|center"
-                    android:id="@+id/ui_create_speak_edit_content"
+                    android:textColor="@android:color/black"
                     android:background="@null"
                     android:padding="10.0dip"
                     android:layout_width="fill_parent"
