--- a/res/layout/activity_drag_top_layout_main.xml
+++ b/res/layout/activity_drag_top_layout_main.xml
@@ -28,8 +28,7 @@
             android:background="@color/colorPrimary"
             android:id="@+id/drag_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
             <!--top view-->
             <LinearLayout
