--- a/res/layout/ui_speak_comment.xml
+++ b/res/layout/ui_speak_comment.xml
@@ -1,31 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.app.demos.layout.ResizeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ui_speak_comment_ResizeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context="com.app.demos.ui.UiSpeakComment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="?attr/actionBarSize"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
         android:orientation="vertical">
-        <ListView
-            android:id="@+id/ui_speak_comment_listview"
+
+        <include layout="@layout/toolbar" />
+
+        <com.app.demos.layout.dragtoplayout.DragTopLayout
+            android:id="@+id/ui_speak_comment_drag_layout"
+            android:background="@color/colorPrimary"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:cacheColorHint="#00000000"
-            android:descendantFocusability="blocksDescendants"
-            android:divider="@null"
-            android:dividerHeight="2dp"
-            android:fadingEdge="vertical"
-            android:fadingEdgeLength="1dp"
-            android:listSelector="@drawable/xml_list_bg" />
+            android:layout_height="match_parent" >
+
+            <!--top view-->
+            <LinearLayout
+                android:id="@+id/top_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/text"
+                    android:text="Top View"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="112dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <ImageView
+                    android:id="@+id/image_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:src="@drawable/ic_launcher"/>
+            </LinearLayout>
+
+            <!--content view-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <ListView
+                    android:id="@+id/ui_speak_comment_listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:cacheColorHint="#00000000"
+                    android:descendantFocusability="blocksDescendants"
+                    android:divider="@null"
+                    android:dividerHeight="2dp"
+                    android:fadingEdge="vertical"
+                    android:fadingEdgeLength="1dp"
+                    android:listSelector="@drawable/xml_list_bg" />
+
+            </LinearLayout>
+
+        </com.app.demos.layout.dragtoplayout.DragTopLayout>
 
     </LinearLayout>
-
-
 
     <LinearLayout
         android:id="@+id/ui_speak_comment_editLayout"
@@ -35,7 +79,8 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:gravity="bottom"
-        android:visibility="invisible">
+        android:visibility="gone"
+        android:background="@color/white">
 
 
         <ImageView
@@ -81,9 +126,17 @@
         android:layout_marginRight="24dp"
         android:layout_marginEnd="24dp"
         android:background="@color/colorPrimary"
-        materialdesign:animate="true"
+
         materialdesign:iconDrawable="@drawable/ic_action_new" />
 
-    <include layout="@layout/toolbar" />
+<com.app.demos.layout.other.CircleImageView
+    android:id="@+id/ui_speak_comment_circle_iv"
+    android:layout_width="?attr/actionBarSize"
+    android:layout_height="?attr/actionBarSize"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentTop="true"
+    android:layout_margin="28dp"
+    android:src="@drawable/l_10"/>
 
 </com.app.demos.layout.ResizeLayout>
