BaseSqite.java up --dragTopLayut.java add drag 延迟‘ ’

--- a/res/layout/ui_create_speak.xml
+++ b/res/layout/ui_create_speak.xml
@@ -120,7 +120,7 @@
 
     <FrameLayout
         android:id="@+id/ui_create_speak_fragment_layout"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     </LinearLayout>
