--- a/res/layout/ui_speak_comment.xml
+++ b/res/layout/ui_speak_comment.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@android:color/black"
         android:orientation="vertical">
 
         <include layout="@layout/toolbar" />
@@ -30,22 +30,11 @@
                 android:animateLayoutChanges="true"
                 android:gravity="center"
                 android:orientation="vertical">
-                <TextView
-                    android:id="@+id/text"
-                    android:text="Top View"
-                    android:textSize="18sp"
-                    android:textColor="@color/white"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="112dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <ImageView
-                    android:id="@+id/image_view"
-                    android:layout_width="wrap_content"
+                <FrameLayout
+                    android:id="@+id/ui_speak_comment_top_view_frameLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="20dp"
-                    android:src="@drawable/ic_launcher"/>
+                    android:layout_marginTop="112dp" />
             </LinearLayout>
 
             <!--content view-->
