--- a/res/layout/lay2.xml
+++ b/res/layout/lay2.xml
@@ -1,22 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#FF8684"
-    android:id="@+id/fragment_2">
-
-    <TextView
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="2"
-        android:textSize="100dp"
-        android:gravity="center"/>
+        android:layout_height="match_parent" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@android:color/holo_orange_dark"
+            android:id="@+id/fragment_2">
 
-    <Button
-        android:id="@+id/lay2_btn"
+
+            <TextView
+                android:id="@+id/lay2_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="2 \n 3"
+                android:textSize="18dp"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/lay2_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/abc_searchview_description_clear"/>
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/fragment_load_progress_continar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/abc_searchview_description_clear"/>
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:gravity="center">
+        <ProgressBar
+            android:id="@+id/fragment_load_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyle" />
+    </LinearLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/fragment_load_reload_image"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:src="@drawable/ic_reload"
+        android:scaleType="center"
+        android:contentDescription="@null" />
+</FrameLayout>
