--- a/res/layout/load_more.xml
+++ b/res/layout/load_more.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:text="@string/btn_more"
+        android:text="@string/loading"
         android:textSize="20sp"
         android:id="@+id/load_more_tv"
          />
