--- a/res/layout/ui_speak_comment.xml
+++ b/res/layout/ui_speak_comment.xml
@@ -30,11 +30,13 @@
                 android:animateLayoutChanges="true"
                 android:gravity="center"
                 android:orientation="vertical">
-                <FrameLayout
-                    android:id="@+id/ui_speak_comment_top_view_frameLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="112dp" />
+                    <fragment
+                        android:id="@+id/ui_speak_comment_top_view_fragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="112dp"
+                        android:layout_marginTop="42dp"
+                        android:name="com.app.demos.ui.fragment.UserInfoFragment"
+                        tools:layout="@layout/lay2" />
             </LinearLayout>
 
             <!--content view-->
@@ -46,6 +48,7 @@
                     android:id="@+id/ui_speak_comment_listview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/white"
                     android:cacheColorHint="#00000000"
                     android:descendantFocusability="blocksDescendants"
                     android:divider="@null"
@@ -115,7 +118,6 @@
         android:layout_marginRight="24dp"
         android:layout_marginEnd="24dp"
         android:background="@color/colorPrimary"
-
         materialdesign:iconDrawable="@drawable/ic_action_new" />
 
 <com.app.demos.layout.other.CircleImageView
@@ -126,6 +128,8 @@
     android:layout_alignParentEnd="true"
     android:layout_alignParentTop="true"
     android:layout_margin="28dp"
-    android:src="@drawable/l_10"/>
+    android:src="@drawable/face"
+    app:border_width="2dp"
+    app:border_color="@color/colorPrimary"/>
 
 </com.app.demos.layout.ResizeLayout>
