--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -58,7 +58,7 @@
     <color name="gray_dark">#616161</color>
     <color name="gray_light">#9e9e9e</color>
     <color name="brown">#5d4037</color>
-
+    <color name="tabTextColor">FF666666</color>
 
 
 </resources>
