--- a/res/layout/ui_actionbar_hide.xml
+++ b/res/layout/ui_actionbar_hide.xml
@@ -87,52 +87,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="@dimen/float_button_margin"
+        android:layout_marginBottom="@dimen/float_button_margin"
+        android:layout_marginEnd="@dimen/float_button_margin"
         android:background="#1E88E5"
-        materialdesign:animate="true"
         materialdesign:iconDrawable="@drawable/ic_action_new" />
-
-
-
-
-
-
-
-
-    <!--<FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/ui_actionbar_layout_add">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/s_9"
-            android:visibility="visible"
-            android:id="@+id/ui_actionbar_iv0" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/s_8"
-            android:visibility="visible"
-
-            android:id="@+id/ui_actionbar_iv1" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/s_3"
-            android:visibility="visible"
-
-            android:id="@+id/ui_actionbar_iv2" />
-    </FrameLayout>
-    </LinearLayout -->
-
-
-
-
 
 </RelativeLayout>
 
