--- a/res/layout/ui_speak_comment.xml
+++ b/res/layout/ui_speak_comment.xml
@@ -119,7 +119,6 @@
         android:layout_marginRight="@dimen/float_button_margin"
         android:layout_marginBottom="@dimen/float_button_margin"
         android:layout_marginEnd="@dimen/float_button_margin"
-        android:background="@color/colorPrimary"
         materialdesign:iconDrawable="@drawable/ic_create_white_48dp" />
 
 <com.app.demos.layout.other.CircleImageView
@@ -131,7 +130,6 @@
     android:layout_alignParentTop="true"
     android:layout_margin="26dp"
     android:src="@drawable/headimg"
-    app:border_width="1dp"
-    app:border_color="@color/colorPrimary"/>
+    app:border_width="1dp" />
 
 </com.app.demos.layout.ResizeLayout>
